# GDL-collab

./: .gitignore  CMakeLists.txt  ColourShooter.sln  ColourShooter.vcxproj  ColourShooter.vcxproj.filters
header/components/: rectCollider.h  rigidbody.h  spriteRenderer.h
header/core/: component.h  entity.h  game.h  serviceHandler.h  sprite.h  subsystem.h  transform.h
header/systems/: assetManager.h  camera.h  clock.h  collisionSystem.h  entitySystem.h  inputHandler.h  renderSystem.h  window.h
lib/Math/: vectors.cpp
src/components/: rectCollider.cpp  rectRenderer.cpp  rigidbody.cpp  spriteRenderer.cpp
src/core/: component.cpp  entity.cpp  game.cpp  main.cpp  serviceHandler.cpp  subsystem.cpp  transform.cpp
src/game/: main.cpp
src/systems/: assetManager.cpp  clock.cpp  collisionSystem.cpp  entitySystem.cpp  inputHandler.cpp  renderSystem.cpp  window.cpp
